# trpl-ebook

./: Cargo.toml  Readme.md
src/: args.rs  file.rs  main.rs  render.rs
src/aux/: args.rs  file.rs  mod.rs  regex.rs
src/book/: markdown.rs  mod.rs  pandoc.rs  table_of_contents.rs
src/convert_book/: index.rs  markdown.rs  mod.rs  pandoc.rs
src/prepare/: mod.rs  toc.rs
src/prepare/text_traits/: adjust.rs  mod.rs  normalize.rs  patterns.rs  references.rs  str_iter.rs
src/text/: mod.rs  normalize.rs  patterns.rs  references.rs  str_iter.rs
